--- a/1.md
+++ b/1.md
@@ -1,7 +1,5 @@
 ## Observations
 
-In our experiment with a dataset consisting of 512 components, we embarked on the journey of training a machine learning model. This experiment was meticulously monitored, and we uncovered intriguing trends across various performance metrics, including accuracies, F1 micros, F1 macros, precisions, and recalls.
-
 ### Initial Rapid Improvement
 
 One of the standout observations was the initial phase of rapid improvement across all metrics. As the model began its training journey, we witnessed a significant surge in performance within the first 100 epochs. During this phase, our model quickly adapted to the intricacies of the dataset, resulting in substantial increases in metrics.
@@ -28,4 +26,4 @@ These observations carry essential implications for our model training approach:
 
 ## Conclusion
 
-The journey of training our machine learning model with a dataset of 512 components revealed fascinating insights into the dynamics of metric behavior. It reaffirmed the importance of monitoring model performance and making informed decisions regarding training strategies. By recognizing the point of diminishing returns in training epochs, we can optimize computational resources and strive for more efficient and effective machine learning models.
+Training our machine learning model with a dataset of 512 components revealed fascinating insights into the dynamics of metric behavior. It reaffirmed the importance of monitoring model performance and making informed decisions regarding training strategies. By recognizing the point of diminishing returns in training epochs, we can optimize computational resources and strive for more efficient and effective machine learning models.
