--- a/4.1.ipynb
+++ b/4.1.ipynb
@@ -1505,7 +1505,7 @@
     "# Convert image to binary\n",
     "_, bw = cv.threshold(gray, 50, 255, cv.THRESH_BINARY | cv.THRESH_OTSU)\n",
     " \n",
-    "# Find all the contours in the thresholded image\n",
+    "# Find all the contours in fr thresholded image\n",
     "contours, _ = cv.findContours(bw, cv.RETR_LIST, cv.CHAIN_APPROX_NONE)\n",
     "curr = 0\n",
     "ans = 0\n",
@@ -1716,7 +1716,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.3"
   }
  },
  "nbformat": 4,
